RESOLVED FIXED115317
WebGL shouldn't allocate a "length" Identifier just to move some numbers around
https://bugs.webkit.org/show_bug.cgi?id=115317
Summary WebGL shouldn't allocate a "length" Identifier just to move some numbers around
Geoffrey Garen
Reported 2013-04-27 17:03:40 PDT
WebGL shouldn't allocate a "length" Identifier just to move some numbers around
Attachments
Patch (4.03 KB, patch)
2013-04-27 17:05 PDT, Geoffrey Garen
dino: review+
Geoffrey Garen
Comment 1 2013-04-27 17:05:48 PDT
Geoffrey Garen
Comment 2 2013-04-27 17:08:14 PDT
Note You need to log in before you can comment on or make changes to this bug.